<resources>
    <string name="app_name">Luxury Hotel</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoibm9pcmVkbiIsImEiOiJja2Zua2k2YW0xbmNvMnFrdW0zc2F0ZTRtIn0.0lctotSlQBLtlPa-0mpD0A</string>
    <string name="take_photo">Take a photo</string>

    <string name="pemesanan">Halaman Pemesanan</string>
    <string name="update_pemesanan">Update Pemesanan</string>
    <string name="add_pemesanan">Tambah Pemesanan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_no_identitas">Input Nomor Identitas</string>
    <string name="input_name">Input Nama</string>
    <string name="input_alamat">Input Alamat</string>
    <string name="input_kamar">Input Pilihan Kamar</string>
    <string name="input_check_in">Input Check In</string>
    <string name="input_check_out">Input Check Out</string>
    <string name="input_no_telp">Input Nomor Telepon</string>
    <string name="input_date">Input Tanggal</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="lama_inap">Lama Inap [HARI]</string>
    <string name="fab_content_desc">fab_content_desc</string>
</resources>